# voice-channel

./: .gitignore  Cargo.toml  Makefile  README.md  agent_log.md  compose.prod.yml  docker-compose.yml  index.html  instructions.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/: agent_instructions.md  agent_log.md  instructions.md  navigation_refactor_summary.md  project_guide.md  project_overview.md  refactor_summary.md
.cursor/rules/: frontend-patterns.mdc  openapi-react-hooks-and-more.mdc  sqlx-migrations.md  sqlx-migrations.mdc
.github/workflows/: release.yml
electron/: main.cjs  preload.cjs
scripts/: dev.sh  setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/auth/: login.tsx  provider.tsx
src/components/settings/: account.tsx  av.tsx  general.tsx  index.tsx
src/sidebar/: channels.tsx  group.tsx  index.tsx  settings.tsx
src/utils/: audio.ts
