[workspace]
members = ["packages/server"]
resolver = "2"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] } 